# BachelorMPOleg

./: .gitignore  CMakeLists.txt  ErrComputer.py  ExpCommon.py  ExperimentResults_Err.csv  ExperimentResults_RawInput.csv  MyAudioProject.sln  MyAudioProject.vcxproj  MyAudioProject.vcxproj.filters  README.md  RawInputVisualizer.py  ResultsAverages.csv  ResultsIndividual.csv  common.py  genRandomPos.py  moveDlls.bat  positionsVisualizer.py  positionsVisualizerControl.py  positionsVisualizerSpatialized.py
AudioEngineDynamic/: AudioEngineDynamic.vcxproj
AudioEngineStatic/: AudioEngineInterface.txt  AudioEngineStatic.vcxproj  AudioEngineStatic.vcxproj.filters
AudioEngineStatic/include/: AudioEngine.h  BSCommon.h  FMod_AudioRenderer.h  FMod_SoundMaker.h  Fmod_AudioRenderer.h  Fmod_SoundMaker.h  IAudioRenderer.h  ISoundMaker.h  SoundMaker.h  SteamAudio_AudioRenderer.h  SteamAudio_SoundMaker.h  ThreeDTI_AudioRenderer.h  ThreeDTI_SoundMaker.h  UtilityFunctions.h
AudioEngineStatic/src/: AudioEngine.cpp  BSCommon.cpp  FMod_AudioRenderer.cpp  FMod_SoundMaker.cpp  Fmod_AudioRenderer.cpp  Fmod_SoundMaker.cpp  SoundMaker.cpp  SteamAudio_AudioRenderer.cpp  SteamAudio_SoundMaker.cpp  ThreeDTI_AudioRenderer.cpp  ThreeDTI_SoundMaker.cpp  UtilityFunctions.cpp
ExampleApp/: ExampleApp.vcxproj  ExampleApp.vcxproj.filters
ExampleApp/src/: main.cpp  steamAudioExample.cpp
ExperimentApp/include/: Application.h  Logger.h  OpenVrManager.h  RandomEngine.h  RendererManager.h  SdlManager.h
ExperimentApp/src/: Application.cpp  Logger.cpp  OpenVrManager.cpp  RandomEngine.cpp  RendererManager.cpp  SdlManager.cpp  main.cpp
OLD/AudioEngine/include/: BSCommon.h  ThreeDTI_AudioRenderer.h
OLD/AudioEngine/src/: BSCommon.cpp  Fmod_AudioRenderer.cpp  SteamAudio_SoundMaker.cpp  ThreeDTI_AudioRenderer.cpp
OLD/ProfilingApp/include/: Application.h
OLD/ProfilingApp/src/: Application.cpp
ProfilingApp/include/: Application.h  Logger.h  Noise_AudioRenderer.h  Noise_SoundMaker.h  RandomEngine.h  RendererManager.h  SdlManager.h
ProfilingApp/src/: Application.cpp  Logger.cpp  Noise_AudioRenderer.cpp  Noise_SoundMaker.cpp  RandomEngine.cpp  RendererManager.cpp  SdlManager.cpp  main.cpp
csvTables/: Control.csv  ExperimentResults_RawAndAnalysed.csv  FMod_noReverb.csv  FMod_withReverb.csv  RawInput.csv  Summary.csv  ThreeDTI_noReverb.csv  ThreeDTI_withReverb.csv  dummy.txt
pythonScripts/: ErrComputer.py  ExpCommon.py  ReadSofaInfo.py  positionsVisualizerControl.py
resultsToProcess/a/: notes.txt
resultsToProcess/b/: notes.txt
resultsToProcess/c/: notes.txt
resultsToProcess/d/: notes.txt
resultsToProcess/f/: notes.txt
resultsToProcess/g/: notes.txt
